# KILNengine

./: .gitignore  README.md
engine/: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.py
engine/docs/: BUILDING.md
engine/docs/dev/: Coding_Guidelines.md
engine/examples/: CMakeLists.txt
engine/examples/events_example/: CMakeLists.txt  main.cpp
engine/examples/hello_app/: CMakeLists.txt  main.cpp
engine/examples/hello_triangle/: CMakeLists.txt  demo.cxx  demo.ixx  main.cpp
engine/examples/hello_world/: CMakeLists.txt  main.cpp
engine/examples/simple_scene/: CMakeLists.txt
engine/examples/simple_scene/src/: CMakeLists.txt  main.cpp
engine/examples/src/: CMakeLists.txt
engine/examples/src/frustum_culling/: AABB.ixx  CMakeLists.txt  Camera.cxx  Camera.ixx  Context.cxx  Context.ixx  Controller.cxx  Controller.ixx  FixedSPSCQueue.ixx  SPSCQueue.ixx  algorithms.cxx  algorithms.ixx  gltf_utils.cxx  gltf_utils.ixx  load_scene.cxx  load_scene.ixx  main.cpp
engine/examples/src/frustum_culling/shaders/: CMakeLists.txt  shaders.cppm  slangdconfig.json
engine/examples/src/frustum_culling/workflow/: CMakeLists.txt  GltfModelLoader.cxx  GltfModelLoader.ixx  ModelDescription.ixx  Renderer.cxx  Renderer.ixx  Scene.cxx  Scene.ixx  load_scene.cxx  load_scene.ixx  workflow.cppm
engine/examples/src/hello_app/: CMakeLists.txt  main.cpp
engine/examples/src/hello_exec/: CMakeLists.txt  main.cpp
engine/examples/src/hello_kiln/: CMakeLists.txt  main.cpp
engine/examples/src/hello_triangle/: CMakeLists.txt  demo.cxx  demo.ixx  main.cpp
engine/examples/src/hello_triangle/shaders/: CMakeLists.txt
engine/examples/src/parallelism/: CMakeLists.txt  main.cpp
engine/examples/src/simple_scene/: AABB.ixx  CMakeLists.txt  Camera.cxx  Camera.ixx  Context.cxx  Context.ixx  Controller.cxx  Controller.ixx  SPSCQueue.ixx  Window.cxx  Window.ixx  algorithms.cxx  algorithms.ixx  demo.cxx  demo.ixx  gltf_utils.cxx  gltf_utils.ixx  load_scene.cxx  load_scene.ixx  main.cpp
engine/examples/src/simple_scene/shaders/: CMakeLists.txt  DrawCommand.slang  Material.slang  Primitive.slang  Scene.slang  main.slang  scene.slang  shaders.cppm  simple.slang
engine/examples/src/simple_scene/workflow/: Asset.cxx  Asset.ixx  CMakeLists.txt  GltfModelLoader.cxx  GltfModelLoader.ixx  ModelDescription.ixx  Pipeline.cxx  Pipeline.ixx  Renderer.cxx  Renderer.ixx  Scene.cxx  Scene.ixx  load_scene.cxx  load_scene.ixx  workflow.cppm
engine/lib/: CMakeLists.txt
engine/lib/cmake/: Config.cmake.in  dependencies.cmake
engine/lib/src/: CMakeLists.txt  kiln.cppm  kiln.hpp  kiln.ixx
engine/lib/src/app/: App.ixx  Builder.ixx  CMakeLists.txt  Context.ixx  ContextBuilder.ixx  app.cppm
engine/lib/src/config/: config.cppm  engine_name.ixx  engine_version.ixx
engine/lib/src/kiln/: CMakeLists.txt  app.hpp  app.ixx  config.hpp  config.ixx  gfx.ixx  kiln.cppm  util.hpp  util.ixx  wsi.ixx
engine/lib/src/kiln/app/: App.cxx  App.hpp  App.ixx  Builder.cxx  Builder.hpp  Builder.ixx  CMakeLists.txt  Context.hpp  ContextBuilder.hpp  PluginTree.cpp  PluginTree.cxx  PluginTree.hpp  PluginTree.ixx  ResourceInjectionStack.hpp  ResourceInjectionStack.ixx  ResourcePlugin.hpp  ResourceStack.hpp  ResourceStack.ixx  app.cppm  create.ixx  memory.ixx  plugin.ixx
engine/lib/src/kiln/asset/: AssetID.ixx  AssetManager.ixx  AssetManagerBuilder.ixx  AssetManagerPlugin.ixx  AssetPool.ixx  CMakeLists.txt  SharedAssetHandle.ixx  WeakAssetHandle.ixx  asset.cppm  asset_c.ixx  asset_id_from_string.ixx
engine/lib/src/kiln/config/: CMakeLists.txt  Config.ixx  Plugin.ixx  Version.ixx  config.cppm  engine_name.hpp  engine_version.hpp  engine_version.ixx
engine/lib/src/kiln/event/: CMakeLists.txt  EventBuffer.ixx  EventPlugin.ixx  EventRecorder.ixx  EventSystem.ixx  Plugin.ixx  SubscriberID.ixx  Timestamp.ixx  event.cppm  event_c.ixx
engine/lib/src/kiln/exec/: Access.ixx  AccessPattern.ixx  Bundle.cxx  Bundle.ixx  CMakeLists.txt  Config.ixx  Ref.ixx  Task.cxx  Task.ixx  TaskGroup.cxx  TaskGroup.ixx  access_pattern_of.ixx  accessor_c.ixx  exec.cppm
engine/lib/src/kiln/gfx/: Bundle.cxx  Bundle.ixx  CMakeLists.txt  gfx.cppm  renderer.ixx  vulkan.ixx
engine/lib/src/kiln/reg/: BuildDirector.ixx  BuildableEntry.ixx  BuildableEntryBase.ixx  BuildableEntryBuilder.ixx  BuildableEntryBuilderBase.ixx  CMakeLists.txt  ConfigurationEntry.ixx  CyclicDependencyDetected.ixx  DependencyChainNode.cxx  DependencyChainNode.ixx  EntryBase.ixx  EntryBuilderBase.ixx  EntryBuilderContainer.cxx  EntryBuilderContainer.ixx  EntryBuilderFailedError.ixx  EntryBuilderInterface.ixx  EntryBuilderTraits.ixx  EntryInjectionContainer.cxx  EntryInjectionContainer.ixx  EntryTraits.ixx  ErasedEntry.ixx  Registry.ixx  RegistryBuilder.cxx  RegistryBuilder.ixx  ReverseDependencyChainNode.cxx  ReverseDependencyChainNode.ixx  configuration_entry_c.ixx  describes_entry_build_c.ixx  entry_builder_c.ixx  entry_c.ixx  reg.cppm  represents_entry_builder_dependency_c.ixx  represents_entry_dependency_c.ixx  strip_dependency_t.ixx
engine/lib/src/kiln/res/: Bin.cxx  Bin.ixx  CMakeLists.txt  GarbageBagInterface.ixx  ResourceID.ixx  ResourceManager.ixx  ResourceManagerBuilder.ixx  ResourcePool.ixx  SharedResourceHandle.ixx  WeakResourceHandle.ixx  res.cppm  resource_c.ixx  resource_id_from_string.ixx
engine/lib/src/kiln/util/: Any.hpp  Any.ixx  Bool.ixx  CMakeLists.txt  Deallocator.hpp  Deallocator.ixx  Deleter.hpp  Deleter.ixx  Dummy.hpp  Dummy.ixx  EnumMask.ixx  FlatMap.ixx  Function.hpp  Function.ixx  Lazy.ixx  (+36 more)
engine/lib/src/util/: Any.ixx  CMakeLists.txt  Deallocator.ixx  OptionalRef.ixx  StringLiteral.ixx  contract_macros.hpp  contracts.ixx  reflection.ixx  type_traits.ixx  util.cppm
engine/lib/src/vulkan/: CMakeLists.txt  vulkan.cppm
engine/test_package/: CMakeLists.txt  conanfile.py
engine/test_package/src/: main.cpp
engine/tests/: CMakeLists.txt
engine/tests/src/: CMakeLists.txt
engine/tests/src/app/: CMakeLists.txt
engine/tests/src/reg/: RegistryBuilder.cpp
engine/tests/src/util/: Any.cpp  Bool.cpp  CMakeLists.txt  OptionalRef.cpp  Overloaded.cpp
(+601 files in other folders)
